<resources>
    <string name="app_name">3TrackerApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="name">TRACK</string>
    <string name="sign_in">Hey, Sign in, please</string>
    <string name="email">Enter your email address</string>
    <string name="password">Enter your password</string>
    <string name="login_btn">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_modifier">Save modifier</string>
    <string name="select_mentor">Select mentor</string>
    <string name="location">location ex. Bucharest</string>
    <string name="phone_number">phone number ex. +407********</string>
    <string name="user_name">Name</string>
    <string name="department_type">Department Type</string>
    <string name="task_description_title">Task Description</string>
    <string name="back">Back</string>
    <string name="edit_task_button_content">Edit task</string>
    <string name="your_groups">Your groups:</string>
    <string name="members">Members</string>
    <string name="all_members">All members:</string>
    <string name="add_new_member">Add new member</string>
    <string name="tasks">Tasks</string>
    <string name="assignee">Assignee:</string>
    <string name="group">Group</string>
    <string name="announcement">Announcement</string>
    <string name="recently_added">Recently Added</string>
    <string-array name="tasks_type">
        <item>Recently Added</item>
        <item>Active tasks</item>
        <item>Closed tasks</item>
    </string-array>

    <string-array name="ProjectType">
        <item>HR project</item>
        <item>Dev project</item>
    </string-array>

    <string-array name="Priority">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>

    <string-array name="Status">
        <item>New</item>
        <item>In Progress</item>
        <item>Done</item>
        <item>Blocked</item>
    </string-array>


</resources>