<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.MyProfileFragment">

    <ImageButton
        android:id="@+id/callBackMyProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/blue"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/settingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="350sp"
        android:layout_height="50dp"
        android:text=" My profile"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.690"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <View
        android:id="@+id/titleView"
        android:layout_width="420sp"
        android:layout_height="2sp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView"
        app:layout_constraintVertical_bias="0.0" />


    <!-- Circular Image View  android:src="@drawable/mountain"-->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="165dp"
        android:layout_height="161dp"
        android:layout_centerInParent="true"
        android:src="@drawable/profile_img"
        app:civ_border_color="#FF000000"
        app:civ_border_width="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:text="@string/user_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

    <TextView
        android:id="@+id/roleTypeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/department_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/save_modifier"
        android:textColor="@color/white"
        android:background="@drawable/round_blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.690"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587"/>

    <Button
        android:id="@+id/selectMentorButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_blue_button"
        android:text="@string/select_mentor"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <ImageView
        android:id="@+id/addPhotoImageView"
        android:layout_width="35sp"
        android:layout_height="35sp"
        android:src="@drawable/ic_baseline_add_photo_alternate_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/myMentorTextView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="34dp"
        android:text="Mentor:"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/emailAddressTextView"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="28dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:text="@string/email"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/phone_number"
        app:layout_constraintBottom_toTopOf="@+id/locationEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="84dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />




</androidx.constraintlayout.widget.ConstraintLayout>