<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.mytasks.TaskDescriptionFragment">

    <TextView
        android:id="@+id/settingTextView"
        android:layout_width="200sp"
        android:layout_height="50dp"
        android:text="@string/task_description_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <ImageButton
        android:id="@+id/callBackTaskDescButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="2dp"
        android:background="@color/blue"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintEnd_toStartOf="@+id/settingTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/editImageButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:background="@color/blue"
        android:contentDescription="@string/edit_task_button_content"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.686"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <View
        android:id="@+id/titleView"
        android:layout_width="420sp"
        android:layout_height="2sp"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titleDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:text="Title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView" />

    <TextView
        android:id="@+id/projectType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView" />

    <TextView
        android:id="@+id/assigneeByDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Assignee by:"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleDesc" />

    <TextView
        android:id="@+id/createdByUserTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="71dp"
        android:text="Create user and time"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/assigneeByDesc"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView" />

    <TextView
        android:id="@+id/assigneeDateDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="Assignee date:"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assigneeByDesc" />

    <TextView
        android:id="@+id/createdByDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="105dp"
        android:text="Create time"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/assigneeDateDesc"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView" />

    <TextView
        android:id="@+id/assigneeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="Assignee:"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assigneeDateDesc" />

    <TextView
        android:id="@+id/assigneeUserDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:layout_marginStart="5dp"
        android:text="User name"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/assigneeDesc"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView" />

    <ProgressBar
        android:id="@+id/progressBarDesc"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="330sp"
        android:layout_height="25sp"
        android:layout_marginTop="145dp"
        android:max="100"
        android:progress="50"
        android:progressTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/deadlineDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="Deadline:"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarDesc" />

    <TextView
        android:id="@+id/deadlineDateDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginStart="5dp"
        android:text="deadlineTime"
        android:textStyle="bold"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/deadlineDesc"
        app:layout_constraintTop_toBottomOf="@+id/progressBarDesc" />

    <TextView
        android:id="@+id/priorityDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="Priority:"
        android:textSize="15sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deadlineDesc" />

    <TextView
        android:id="@+id/priorityValueDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="5dp"
        android:text="priority value"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/priorityDesc"
        app:layout_constraintTop_toBottomOf="@+id/progressBarDesc" />

    <androidx.cardview.widget.CardView
        android:id="@+id/filter_status_card_view"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarDesc">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-77dp"
            tools:layout_editor_absoluteY="-16dp"
            android:background="@color/blue">
            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:backgroundTint="@color/gray"
                android:backgroundTintMode="multiply"
                android:popupBackground="@color/blue"
                android:outlineAmbientShadowColor="@color/blue"
                android:outlineSpotShadowColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/descriptionDesc"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="80dp"
        android:layout_marginStart="20dp"
        android:text="Description   "
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBarDesc"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>